Fixed spacing

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -146,12 +146,12 @@ a:link{
 
 .genericLeftFloat {
   float: left;
-  width: 70%;
+  width: 65%;
 }
 
 .genericRightFloat {
   float: right;
-  width: 20%;
+  width: 25%;
 }
 
 /* Buttons */
